[workspace]
resolver = "2"
members = [
    "packages/hook-runtime",
    "packages/hook-library",
    "packages/anchor-program/programs/lien-hook-executor",
]

[workspace.package]
version = "0.1.0"
edition = "2021"
license = "Apache-2.0"
repository = "https://github.com/liens-fi/lien"
authors = ["LIEN contributors"]

[workspace.dependencies]
anchor-lang = "0.31.1"
anchor-spl = "0.31.1"
borsh = "1.6.1"
thiserror = "1.0"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
bytemuck = { version = "1.16", features = ["derive"] }
